corrections for logo gap

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -8,7 +8,8 @@
   text-decoration: none;
 }
 
-.navbar-brand {
+.navbar-brand,
+.custom-brand {
   margin: 0;
   padding: 0;
 }
